# ucr-chatbot-interface

./: CONTRIBUTING.md  README.md  pyproject.toml
development/: outline.md
src/ucr_chatbot_interface/: __init__.py  __main__.py  api.py  cl_app.py  llm.py
