[project]
name = "ucr-chatbot-interface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.8.3",
    "fastapi>=0.116.2",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.406",
    "ruff>=0.14.1",
]

[tool.pyright]
typeCheckingMode = "standard"


[tool.ruff]
include=["src/**.py"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "D101",
    "D102",
    "D103"] 

